Commit de atualização: Melhora no suporte de imagens na persistência de novos usuários.